refactor freeloaded to freeloaded_by (matches all existing freeloads to shift_entry user_id)
